@@ -4,8 +4,10 @@ import com.sparta.bedelivery.entity.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import javax.management.relation.Relation;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
     private final User user;
@@ -13,10 +15,18 @@ public class CustomUserDetails implements UserDetails {
     public CustomUserDetails(User user) {
         this.user = user;
     }
+    public User  getUser() {
+        return user;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 권한이 필요하면 수정
+        // 역할이 없으면 빈 리스트 반환 (예외 방지)
+        if (user.getRole() == null) {
+            return List.of();
+        }
+        // role을 GrantedAuthority로 변환
+        return List.of(() -> "ROLE_" + user.getRole().name()); // ex: ROLE_CUSTOMER
     }
 
     @Override
@@ -26,7 +36,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public String getUsername() {
-        return user.getEmail(); // 이메일을 username으로 사용
+        return user.getUserId();
     }
 
     @Override
@@ -48,4 +58,6 @@ public class CustomUserDetails implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
+
+
 }
